Pages/TrackDetailView/TrackDetailLayout.razor.css
p {
    color: #1e2022;
    margin-bottom: 0;
}

.layout-header {
    padding-inline: 16px;
    margin-top: 16px;
}

.layout-header h4 {
    font-weight: 700;
}

.detail-layout {
    width: 100%;
    display: flex;
    flex-direction: column;
}

.detail-layout-list {
    width: 100%;
    height: 32vh;
    display: flex;
    flex-direction: row;
    border: 1px solid #1e2022;
    border-radius: 14px;
    overflow: hidden;
}

.layout-selection {
    background-color: #303841;
    width: 30.8%;
    height: 100%;
    border-right: 1px solid transparent;
    padding: 24px;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
}

.layout-selection::-webkit-scrollbar {
    background-color: #303841;
    width: 4px;
}

.layout-selection::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: #e8e8e8;
}

.layout-item, .layout-item-selected {
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 12px;
    padding-inline: 12px;
    padding-block: 16px;
}

.layout-item p, .layout-item-selected p {
    color: #f4f4f2;
}

.layout-item {
    border: 1px solid transparent;
    transition: 0.25s;
    box-shadow: 0px 10px 1px -9px #f4f4f2;
}

.layout-item:hover {
    cursor: pointer;
    border: 1px solid #f4f4f2;
    border-radius: 12px;
    transition: 0.25s;
    box-shadow: none;
}

.layout-item-selected {
    background-color: #1e2022;
    border: 1px solid #ffc107;
    border-radius: 12px;
    transition: 0.25s;
}

.layout-map {
    background-color: #f4f4f2;
    width: 35%;
    height: 100%;
    padding: 24px;
}

.layout-map img {
    background-color: #1e2022;
    object-fit: contain;
    width: 100%;
    height: 100%;
    border-radius: 24px;
}

.layout-info {
    background-color: #f4f4f2;
    width: 35%;
    height: 100%;
    padding-block: 24px;
    padding-inline: 8px;
    display: flex;
    flex-direction: column;
}

.info-group {
    margin-top: 8px;
}

.info-group:nth-child(2) {
    margin-top: 12px;
}

.info-label {
    font-size: 14px;
    font-weight: 600;
}

.info-value {
    font-size: 24px;
    font-weight: 700;
}

@media (max-width: 540px) {
    .layout-header {
        padding-inline: 8px;
    }

    .detail-layout-list {
        flex-direction: column;
        height: 100%;
    }

    .layout-selection {
        flex-direction: row;
        gap: 8px;
        width: 100%;
        height: 15vh;
        padding: 16px;
        overflow-y: hidden;
        overflow-x: scroll;
        border-right: 0;
        border-bottom: 1px solid transparent;
    }

    .layout-selection::-webkit-scrollbar {
        height: 4px;
    }

    .layout-item {
        border: 1px solid #f4f4f2;
        box-shadow: none;
    }

    .layout-item:hover {
        border: 1px solid #f4f4f2;
        border-radius: 8px;
    }

    .layout-item, .layout-item-selected {
        margin-bottom: 0;
        aspect-ratio: 1 / 1;
        padding-block: 4px;
        border-radius: 8px;
        height: 100%;
    }

    .layout-item p, .layout-item-selected p {
        height: 100%;
        overflow: hidden;
        text-overflow: ellipsis;
        font-size: 3.3vw;
    }

    .layout-map {
        width: 100%;
        height: 28vh;
        padding: 16px;
    }

    .layout-info {
        width: 100%;
        height: 15vh;
        padding-block: 0;
        padding-inline: 16px;
        display: grid;
        grid-template-areas: "title title"
            "info1 info2";
        grid-template-columns: 40% 60%;
        grid-template-rows: 35% 65%;
    }

    .info-group {
        margin-top: 0;
    }

    .layout-info > .info-group:first-child {
        grid-area: title;
    }

    .layout-info > .info-group:nth-child(2) {
        grid-area: info1;
        margin-top: 0;
    }

    .layout-info > .info-group:last-child {
        grid-area: info2;
        margin-top: 0;
        margin-left: 16px;
    }

    .info-value {
        font-size: 6vw;
    }

    .info-label {
        font-size: 3.4vw;
    }
}

